# Codeforces

./: CMakeLists.txt  README.md  new.cpp  test.cpp
#820_div3/: Friends_and_the_Restaurant.cpp  Guess_the_Cycle_Size.cpp  Jumping_on_Tiles.cpp  TwoElevators.cpp
#828_div3/: Divisible_Numbers_easy.cpp  Even-Odd_Increments.cpp  Number_Replacement.cpp  Traffic_Light.cpp
