cmake_minimum_required(VERSION 3.23)
project (codeforce)

set(CMAKE_CXX_STANDARD 17)


add_executable(SpellCheck "#817_div4/SpellCheck.cpp")
add_executable(Colourblindness "#817_div4/Colourblindness.cpp")
add_executable(WordGame "#817_div4/WordGame.cpp")
add_executable(Line "#817_div4/Line.cpp")
add_executable(Counting_Rectangles "#817_div4/Counting_Rectangles.cpp")
add_executable(TwoElevators "#820_div3/TwoElevators.cpp")
add_executable(DecodeString "#820_div3/DecodeString.cpp")
add_executable(test test.cpp)
add_executable(Jumping_on_Tiles "#820_div3/Jumping_on_Tiles.cpp")
add_executable(Friends_and_the_Restaurant "#820_div3/Friends_and_the_Restaurant.cpp")
add_executable(Guess_the_Cycle_Size "#820_div3/Guess_the_Cycle_Size.cpp")
add_executable(YES_or_YES "#806_div4/YES_or_YES.cpp")
add_executable(ICPC_Balloons "#806_div4/ICPC_Balloons.cpp")
add_executable(Cypher "#806_div4/Cypher.cpp")
add_executable(Double_Strings "#806_div4/Double_Strings.cpp")
add_executable(Mirror_Grid "#806_div4/Mirror_Grid.cpp")
add_executable(Yet_Another_Problem "#806_div4/Yet_Another_Problem.cpp")
add_executable(Sum "#827_div4/Sum.cpp")
add_executable(Increasing "#827_div4/Increasing.cpp")
add_executable(Stripes "#827_div4/Stripes.cpp")
add_executable(Scuza "#827_div4/Scuza.cpp")
add_executable(Smaller "#827_div4/Smaller.cpp")
add_executable(Coprime "#827_div4/Coprime.cpp")